--- a/centos7/Dockerfile
+++ b/centos7/Dockerfile
@@ -1,3 +1,5 @@
+# Crear imagen = docker build -t centos-phoronix
+# test = docker -it container_name bash; phoronix-test-suit [test]
 FROM centos
 RUN yum install git yum-utils php-cli php-xml zip -y
 RUN git clone https://github.com/phoronix-test-suite/phoronix-test-suite.git
